Arquitectura de computadores I/Proyecto 1/compiler/Compilador/parser.out
Created by PLY version 3.0 (http://www.dabeaz.com/ply)

Unused terminals:

    RPC
    LPC
    MINUS
    BLT
    BGT
    BLE
    BGE
    LI

Grammar

Rule 1     S' -> program
Rule 2     program -> block
Rule 3     block -> inst block
Rule 4     block -> empty
Rule 5     inst -> ID DP
Rule 6     inst -> NOP
Rule 7     inst -> ADD REG COMMA REG COMMA REG
Rule 8     inst -> AND REG COMMA REG COMMA REG
Rule 9     inst -> NOR REG COMMA REG COMMA REG
Rule 10    inst -> OR REG COMMA REG COMMA REG
Rule 11    inst -> SLT REG COMMA REG COMMA REG
Rule 12    inst -> SLL REG COMMA REG COMMA NUM NUMBER
Rule 13    inst -> SRL REG COMMA REG COMMA NUM NUMBER
Rule 14    inst -> SUB REG COMMA REG COMMA REG
Rule 15    inst -> ADDI REG COMMA REG COMMA NUM NUMBER
Rule 16    inst -> BEQ REG COMMA REG COMMA ID
Rule 17    inst -> BNE REG COMMA REG COMMA ID
Rule 18    inst -> LW REG COMMA REG COMMA NUM NUMBER
Rule 19    inst -> SLTI REG COMMA REG COMMA NUM NUMBER
Rule 20    inst -> SW REG COMMA REG COMMA NUM NUMBER
Rule 21    inst -> JAL ID
Rule 22    inst -> J ID
Rule 23    inst -> MOVE REG COMMA REG
Rule 24    inst -> MPP REG COMMA REG
Rule 25    inst -> MPPI NUM NUMBER COMMA NUM NUMBER
Rule 26    inst -> PPXL REG
Rule 27    inst -> PTMU REG
Rule 28    inst -> PTML REG
Rule 29    inst -> PTMD REG
Rule 30    inst -> PTMR REG
Rule 31    inst -> PPXLC REG COMMA REG
Rule 32    inst -> PMPXL REG COMMA REG
Rule 33    inst -> CS REG COMMA REG COMMA NUM NUMBER
Rule 34    inst -> SPNT REG COMMA REG COMMA NUM NUMBER
Rule 35    inst -> MPNT REG COMMA REG COMMA NUM NUMBER
Rule 36    empty -> <empty>

Terminals, with rules where they appear

ADD                  : 6
ADDI                 : 14
AND                  : 7
BEQ                  : 15
BGE                  : 
BGT                  : 
BLE                  : 
BLT                  : 
BNE                  : 16
COMMA                : 6 6 7 7 8 8 9 9 10 10 11 11 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 22 23 24 30 31 32 32 33 33 34 34
CS                   : 32
DP                   : 4
ID                   : 4 15 16 20 21
J                    : 21
JAL                  : 20
LI                   : 
LPC                  : 
LW                   : 17
MINUS                : 
MOVE                 : 22
MPNT                 : 34
MPP                  : 23
MPPI                 : 24
NOP                  : 5
NOR                  : 8
NUM                  : 11 12 14 17 18 19 24 24 32 33 34
NUMBER               : 11 12 14 17 18 19 24 24 32 33 34
OR                   : 9
PMPXL                : 31
PPXL                 : 25
PPXLC                : 30
PTMD                 : 28
PTML                 : 27
PTMR                 : 29
PTMU                 : 26
REG                  : 6 6 6 7 7 7 8 8 8 9 9 9 10 10 10 11 11 12 12 13 13 13 14 14 15 15 16 16 17 17 18 18 19 19 22 22 23 23 25 26 27 28 29 30 30 31 31 32 32 33 33 34 34
RPC                  : 
SLL                  : 11
SLT                  : 10
SLTI                 : 18
SPNT                 : 33
SRL                  : 12
SUB                  : 13
SW                   : 19
error                : 

Nonterminals, with rules where they appear

block                : 1 2
empty                : 3
inst                 : 2
program              : 0

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . block
    (2) block -> . inst block
    (3) block -> . empty
    (4) inst -> . ID DP
    (5) inst -> . NOP
    (6) inst -> . ADD REG COMMA REG COMMA REG
    (7) inst -> . AND REG COMMA REG COMMA REG
    (8) inst -> . NOR REG COMMA REG COMMA REG
    (9) inst -> . OR REG COMMA REG COMMA REG
    (10) inst -> . SLT REG COMMA REG COMMA REG
    (11) inst -> . SLL REG COMMA REG COMMA NUM NUMBER
    (12) inst -> . SRL REG COMMA REG COMMA NUM NUMBER
    (13) inst -> . SUB REG COMMA REG COMMA REG
    (14) inst -> . ADDI REG COMMA REG COMMA NUM NUMBER
    (15) inst -> . BEQ REG COMMA REG COMMA ID
    (16) inst -> . BNE REG COMMA REG COMMA ID
    (17) inst -> . LW REG COMMA REG COMMA NUM NUMBER
    (18) inst -> . SLTI REG COMMA REG COMMA NUM NUMBER
    (19) inst -> . SW REG COMMA REG COMMA NUM NUMBER
    (20) inst -> . JAL ID
    (21) inst -> . J ID
    (22) inst -> . MOVE REG COMMA REG
    (23) inst -> . MPP REG COMMA REG
    (24) inst -> . MPPI NUM NUMBER COMMA NUM NUMBER
    (25) inst -> . PPXL REG
    (26) inst -> . PTMU REG
    (27) inst -> . PTML REG
    (28) inst -> . PTMD REG
    (29) inst -> . PTMR REG
    (30) inst -> . PPXLC REG COMMA REG
    (31) inst -> . PMPXL REG COMMA REG
    (32) inst -> . CS REG COMMA REG COMMA NUM NUMBER
    (33) inst -> . SPNT REG COMMA REG COMMA NUM NUMBER
    (34) inst -> . MPNT REG COMMA REG COMMA NUM NUMBER
    (35) empty -> .

    ID              shift and go to state 5
    NOP             shift and go to state 6
    ADD             shift and go to state 7
    AND             shift and go to state 8
    NOR             shift and go to state 9
    OR              shift and go to state 10
    SLT             shift and go to state 11
    SLL             shift and go to state 12
    SRL             shift and go to state 13
    SUB             shift and go to state 14
    ADDI            shift and go to state 15
    BEQ             shift and go to state 16
    BNE             shift and go to state 17
    LW              shift and go to state 18
    SLTI            shift and go to state 19
    SW              shift and go to state 20
    JAL             shift and go to state 21
    J               shift and go to state 22
    MOVE            shift and go to state 23
    MPP             shift and go to state 24
    MPPI            shift and go to state 25
    PPXL            shift and go to state 26
    PTMU            shift and go to state 27
    PTML            shift and go to state 28
    PTMD            shift and go to state 29
    PTMR            shift and go to state 30
    PPXLC           shift and go to state 31
    PMPXL           shift and go to state 32
    CS              shift and go to state 33
    SPNT            shift and go to state 34
    MPNT            shift and go to state 35
    $end            reduce using rule 35 (empty -> .)

    program                        shift and go to state 1
    block                          shift and go to state 2
    inst                           shift and go to state 3
    empty                          shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (1) program -> block .

    $end            reduce using rule 1 (program -> block .)


state 3

    (2) block -> inst . block
    (2) block -> . inst block
    (3) block -> . empty
    (4) inst -> . ID DP
    (5) inst -> . NOP
    (6) inst -> . ADD REG COMMA REG COMMA REG
    (7) inst -> . AND REG COMMA REG COMMA REG
    (8) inst -> . NOR REG COMMA REG COMMA REG
    (9) inst -> . OR REG COMMA REG COMMA REG
    (10) inst -> . SLT REG COMMA REG COMMA REG
    (11) inst -> . SLL REG COMMA REG COMMA NUM NUMBER
    (12) inst -> . SRL REG COMMA REG COMMA NUM NUMBER
    (13) inst -> . SUB REG COMMA REG COMMA REG
    (14) inst -> . ADDI REG COMMA REG COMMA NUM NUMBER
    (15) inst -> . BEQ REG COMMA REG COMMA ID
    (16) inst -> . BNE REG COMMA REG COMMA ID
    (17) inst -> . LW REG COMMA REG COMMA NUM NUMBER
    (18) inst -> . SLTI REG COMMA REG COMMA NUM NUMBER
    (19) inst -> . SW REG COMMA REG COMMA NUM NUMBER
    (20) inst -> . JAL ID
    (21) inst -> . J ID
    (22) inst -> . MOVE REG COMMA REG
    (23) inst -> . MPP REG COMMA REG
    (24) inst -> . MPPI NUM NUMBER COMMA NUM NUMBER
    (25) inst -> . PPXL REG
    (26) inst -> . PTMU REG
    (27) inst -> . PTML REG
    (28) inst -> . PTMD REG
    (29) inst -> . PTMR REG
    (30) inst -> . PPXLC REG COMMA REG
    (31) inst -> . PMPXL REG COMMA REG
    (32) inst -> . CS REG COMMA REG COMMA NUM NUMBER
    (33) inst -> . SPNT REG COMMA REG COMMA NUM NUMBER
    (34) inst -> . MPNT REG COMMA REG COMMA NUM NUMBER
    (35) empty -> .

    ID              shift and go to state 5
    NOP             shift and go to state 6
    ADD             shift and go to state 7
    AND             shift and go to state 8
    NOR             shift and go to state 9
    OR              shift and go to state 10
    SLT             shift and go to state 11
    SLL             shift and go to state 12
    SRL             shift and go to state 13
    SUB             shift and go to state 14
    ADDI            shift and go to state 15
    BEQ             shift and go to state 16
    BNE             shift and go to state 17
    LW              shift and go to state 18
    SLTI            shift and go to state 19
    SW              shift and go to state 20
    JAL             shift and go to state 21
    J               shift and go to state 22
    MOVE            shift and go to state 23
    MPP             shift and go to state 24
    MPPI            shift and go to state 25
    PPXL            shift and go to state 26
    PTMU            shift and go to state 27
    PTML            shift and go to state 28
    PTMD            shift and go to state 29
    PTMR            shift and go to state 30
    PPXLC           shift and go to state 31
    PMPXL           shift and go to state 32
    CS              shift and go to state 33
    SPNT            shift and go to state 34
    MPNT            shift and go to state 35
    $end            reduce using rule 35 (empty -> .)

    inst                           shift and go to state 3
    block                          shift and go to state 36
    empty                          shift and go to state 4

state 4

    (3) block -> empty .

    $end            reduce using rule 3 (block -> empty .)


state 5

    (4) inst -> ID . DP

    DP              shift and go to state 37


state 6

    (5) inst -> NOP .

    ID              reduce using rule 5 (inst -> NOP .)
    NOP             reduce using rule 5 (inst -> NOP .)
    ADD             reduce using rule 5 (inst -> NOP .)
    AND             reduce using rule 5 (inst -> NOP .)
    NOR             reduce using rule 5 (inst -> NOP .)
    OR              reduce using rule 5 (inst -> NOP .)
    SLT             reduce using rule 5 (inst -> NOP .)
    SLL             reduce using rule 5 (inst -> NOP .)
    SRL             reduce using rule 5 (inst -> NOP .)
    SUB             reduce using rule 5 (inst -> NOP .)
    ADDI            reduce using rule 5 (inst -> NOP .)
    BEQ             reduce using rule 5 (inst -> NOP .)
    BNE             reduce using rule 5 (inst -> NOP .)
    LW              reduce using rule 5 (inst -> NOP .)
    SLTI            reduce using rule 5 (inst -> NOP .)
    SW              reduce using rule 5 (inst -> NOP .)
    JAL             reduce using rule 5 (inst -> NOP .)
    J               reduce using rule 5 (inst -> NOP .)
    MOVE            reduce using rule 5 (inst -> NOP .)
    MPP             reduce using rule 5 (inst -> NOP .)
    MPPI            reduce using rule 5 (inst -> NOP .)
    PPXL            reduce using rule 5 (inst -> NOP .)
    PTMU            reduce using rule 5 (inst -> NOP .)
    PTML            reduce using rule 5 (inst -> NOP .)
    PTMD            reduce using rule 5 (inst -> NOP .)
    PTMR            reduce using rule 5 (inst -> NOP .)
    PPXLC           reduce using rule 5 (inst -> NOP .)
    PMPXL           reduce using rule 5 (inst -> NOP .)
    CS              reduce using rule 5 (inst -> NOP .)
    SPNT            reduce using rule 5 (inst -> NOP .)
    MPNT            reduce using rule 5 (inst -> NOP .)
    $end            reduce using rule 5 (inst -> NOP .)


state 7

    (6) inst -> ADD . REG COMMA REG COMMA REG

    REG             shift and go to state 38


state 8

    (7) inst -> AND . REG COMMA REG COMMA REG

    REG             shift and go to state 39


state 9

    (8) inst -> NOR . REG COMMA REG COMMA REG

    REG             shift and go to state 40


state 10

    (9) inst -> OR . REG COMMA REG COMMA REG

    REG             shift and go to state 41


state 11

    (10) inst -> SLT . REG COMMA REG COMMA REG

    REG             shift and go to state 42


state 12

    (11) inst -> SLL . REG COMMA REG COMMA NUM NUMBER

    REG             shift and go to state 43


state 13

    (12) inst -> SRL . REG COMMA REG COMMA NUM NUMBER

    REG             shift and go to state 44


state 14

    (13) inst -> SUB . REG COMMA REG COMMA REG

    REG             shift and go to state 45


state 15

    (14) inst -> ADDI . REG COMMA REG COMMA NUM NUMBER

    REG             shift and go to state 46


state 16

    (15) inst -> BEQ . REG COMMA REG COMMA ID

    REG             shift and go to state 47


state 17

    (16) inst -> BNE . REG COMMA REG COMMA ID

    REG             shift and go to state 48


state 18

    (17) inst -> LW . REG COMMA REG COMMA NUM NUMBER

    REG             shift and go to state 49


state 19

    (18) inst -> SLTI . REG COMMA REG COMMA NUM NUMBER

    REG             shift and go to state 50


state 20

    (19) inst -> SW . REG COMMA REG COMMA NUM NUMBER

    REG             shift and go to state 51


state 21

    (20) inst -> JAL . ID

    ID              shift and go to state 52


state 22

    (21) inst -> J . ID

    ID              shift and go to state 53


state 23

    (22) inst -> MOVE . REG COMMA REG

    REG             shift and go to state 54


state 24

    (23) inst -> MPP . REG COMMA REG

    REG             shift and go to state 55


state 25

    (24) inst -> MPPI . NUM NUMBER COMMA NUM NUMBER

    NUM             shift and go to state 56


state 26

    (25) inst -> PPXL . REG

    REG             shift and go to state 57


state 27

    (26) inst -> PTMU . REG

    REG             shift and go to state 58


state 28

    (27) inst -> PTML . REG

    REG             shift and go to state 59


state 29

    (28) inst -> PTMD . REG

    REG             shift and go to state 60


state 30

    (29) inst -> PTMR . REG

    REG             shift and go to state 61


state 31

    (30) inst -> PPXLC . REG COMMA REG

    REG             shift and go to state 62


state 32

    (31) inst -> PMPXL . REG COMMA REG

    REG             shift and go to state 63


state 33

    (32) inst -> CS . REG COMMA REG COMMA NUM NUMBER

    REG             shift and go to state 64


state 34

    (33) inst -> SPNT . REG COMMA REG COMMA NUM NUMBER

    REG             shift and go to state 65


state 35

    (34) inst -> MPNT . REG COMMA REG COMMA NUM NUMBER

    REG             shift and go to state 66


state 36

    (2) block -> inst block .

    $end            reduce using rule 2 (block -> inst block .)


state 37

    (4) inst -> ID DP .

    ID              reduce using rule 4 (inst -> ID DP .)
    NOP             reduce using rule 4 (inst -> ID DP .)
    ADD             reduce using rule 4 (inst -> ID DP .)
    AND             reduce using rule 4 (inst -> ID DP .)
    NOR             reduce using rule 4 (inst -> ID DP .)
    OR              reduce using rule 4 (inst -> ID DP .)
    SLT             reduce using rule 4 (inst -> ID DP .)
    SLL             reduce using rule 4 (inst -> ID DP .)
    SRL             reduce using rule 4 (inst -> ID DP .)
    SUB             reduce using rule 4 (inst -> ID DP .)
    ADDI            reduce using rule 4 (inst -> ID DP .)
    BEQ             reduce using rule 4 (inst -> ID DP .)
    BNE             reduce using rule 4 (inst -> ID DP .)
    LW              reduce using rule 4 (inst -> ID DP .)
    SLTI            reduce using rule 4 (inst -> ID DP .)
    SW              reduce using rule 4 (inst -> ID DP .)
    JAL             reduce using rule 4 (inst -> ID DP .)
    J               reduce using rule 4 (inst -> ID DP .)
    MOVE            reduce using rule 4 (inst -> ID DP .)
    MPP             reduce using rule 4 (inst -> ID DP .)
    MPPI            reduce using rule 4 (inst -> ID DP .)
    PPXL            reduce using rule 4 (inst -> ID DP .)
    PTMU            reduce using rule 4 (inst -> ID DP .)
    PTML            reduce using rule 4 (inst -> ID DP .)
    PTMD            reduce using rule 4 (inst -> ID DP .)
    PTMR            reduce using rule 4 (inst -> ID DP .)
    PPXLC           reduce using rule 4 (inst -> ID DP .)
    PMPXL           reduce using rule 4 (inst -> ID DP .)
    CS              reduce using rule 4 (inst -> ID DP .)
    SPNT            reduce using rule 4 (inst -> ID DP .)
    MPNT            reduce using rule 4 (inst -> ID DP .)
    $end            reduce using rule 4 (inst -> ID DP .)


state 38

    (6) inst -> ADD REG . COMMA REG COMMA REG

    COMMA           shift and go to state 67


state 39

    (7) inst -> AND REG . COMMA REG COMMA REG

    COMMA           shift and go to state 68


state 40

    (8) inst -> NOR REG . COMMA REG COMMA REG

    COMMA           shift and go to state 69


state 41

    (9) inst -> OR REG . COMMA REG COMMA REG

    COMMA           shift and go to state 70


state 42

    (10) inst -> SLT REG . COMMA REG COMMA REG

    COMMA           shift and go to state 71


state 43

    (11) inst -> SLL REG . COMMA REG COMMA NUM NUMBER

    COMMA           shift and go to state 72


state 44

    (12) inst -> SRL REG . COMMA REG COMMA NUM NUMBER

    COMMA           shift and go to state 73


state 45

    (13) inst -> SUB REG . COMMA REG COMMA REG

    COMMA           shift and go to state 74


state 46

    (14) inst -> ADDI REG . COMMA REG COMMA NUM NUMBER

    COMMA           shift and go to state 75


state 47

    (15) inst -> BEQ REG . COMMA REG COMMA ID

    COMMA           shift and go to state 76


state 48

    (16) inst -> BNE REG . COMMA REG COMMA ID

    COMMA           shift and go to state 77


state 49

    (17) inst -> LW REG . COMMA REG COMMA NUM NUMBER

    COMMA           shift and go to state 78


state 50

    (18) inst -> SLTI REG . COMMA REG COMMA NUM NUMBER

    COMMA           shift and go to state 79


state 51

    (19) inst -> SW REG . COMMA REG COMMA NUM NUMBER

    COMMA           shift and go to state 80


state 52

    (20) inst -> JAL ID .

    ID              reduce using rule 20 (inst -> JAL ID .)
    NOP             reduce using rule 20 (inst -> JAL ID .)
    ADD             reduce using rule 20 (inst -> JAL ID .)
    AND             reduce using rule 20 (inst -> JAL ID .)
    NOR             reduce using rule 20 (inst -> JAL ID .)
    OR              reduce using rule 20 (inst -> JAL ID .)
    SLT             reduce using rule 20 (inst -> JAL ID .)
    SLL             reduce using rule 20 (inst -> JAL ID .)
    SRL             reduce using rule 20 (inst -> JAL ID .)
    SUB             reduce using rule 20 (inst -> JAL ID .)
    ADDI            reduce using rule 20 (inst -> JAL ID .)
    BEQ             reduce using rule 20 (inst -> JAL ID .)
    BNE             reduce using rule 20 (inst -> JAL ID .)
    LW              reduce using rule 20 (inst -> JAL ID .)
    SLTI            reduce using rule 20 (inst -> JAL ID .)
    SW              reduce using rule 20 (inst -> JAL ID .)
    JAL             reduce using rule 20 (inst -> JAL ID .)
    J               reduce using rule 20 (inst -> JAL ID .)
    MOVE            reduce using rule 20 (inst -> JAL ID .)
    MPP             reduce using rule 20 (inst -> JAL ID .)
    MPPI            reduce using rule 20 (inst -> JAL ID .)
    PPXL            reduce using rule 20 (inst -> JAL ID .)
    PTMU            reduce using rule 20 (inst -> JAL ID .)
    PTML            reduce using rule 20 (inst -> JAL ID .)
    PTMD            reduce using rule 20 (inst -> JAL ID .)
    PTMR            reduce using rule 20 (inst -> JAL ID .)
    PPXLC           reduce using rule 20 (inst -> JAL ID .)
    PMPXL           reduce using rule 20 (inst -> JAL ID .)
    CS              reduce using rule 20 (inst -> JAL ID .)
    SPNT            reduce using rule 20 (inst -> JAL ID .)
    MPNT            reduce using rule 20 (inst -> JAL ID .)
    $end            reduce using rule 20 (inst -> JAL ID .)


state 53

    (21) inst -> J ID .

    ID              reduce using rule 21 (inst -> J ID .)
    NOP             reduce using rule 21 (inst -> J ID .)
    ADD             reduce using rule 21 (inst -> J ID .)
    AND             reduce using rule 21 (inst -> J ID .)
    NOR             reduce using rule 21 (inst -> J ID .)
    OR              reduce using rule 21 (inst -> J ID .)
    SLT             reduce using rule 21 (inst -> J ID .)
    SLL             reduce using rule 21 (inst -> J ID .)
    SRL             reduce using rule 21 (inst -> J ID .)
    SUB             reduce using rule 21 (inst -> J ID .)
    ADDI            reduce using rule 21 (inst -> J ID .)
    BEQ             reduce using rule 21 (inst -> J ID .)
    BNE             reduce using rule 21 (inst -> J ID .)
    LW              reduce using rule 21 (inst -> J ID .)
    SLTI            reduce using rule 21 (inst -> J ID .)
    SW              reduce using rule 21 (inst -> J ID .)
    JAL             reduce using rule 21 (inst -> J ID .)
    J               reduce using rule 21 (inst -> J ID .)
    MOVE            reduce using rule 21 (inst -> J ID .)
    MPP             reduce using rule 21 (inst -> J ID .)
    MPPI            reduce using rule 21 (inst -> J ID .)
    PPXL            reduce using rule 21 (inst -> J ID .)
    PTMU            reduce using rule 21 (inst -> J ID .)
    PTML            reduce using rule 21 (inst -> J ID .)
    PTMD            reduce using rule 21 (inst -> J ID .)
    PTMR            reduce using rule 21 (inst -> J ID .)
    PPXLC           reduce using rule 21 (inst -> J ID .)
    PMPXL           reduce using rule 21 (inst -> J ID .)
    CS              reduce using rule 21 (inst -> J ID .)
    SPNT            reduce using rule 21 (inst -> J ID .)
    MPNT            reduce using rule 21 (inst -> J ID .)
    $end            reduce using rule 21 (inst -> J ID .)


state 54

    (22) inst -> MOVE REG . COMMA REG

    COMMA           shift and go to state 81


state 55

    (23) inst -> MPP REG . COMMA REG

    COMMA           shift and go to state 82


state 56

    (24) inst -> MPPI NUM . NUMBER COMMA NUM NUMBER

    NUMBER          shift and go to state 83


state 57

    (25) inst -> PPXL REG .

    ID              reduce using rule 25 (inst -> PPXL REG .)
    NOP             reduce using rule 25 (inst -> PPXL REG .)
    ADD             reduce using rule 25 (inst -> PPXL REG .)
    AND             reduce using rule 25 (inst -> PPXL REG .)
    NOR             reduce using rule 25 (inst -> PPXL REG .)
    OR              reduce using rule 25 (inst -> PPXL REG .)
    SLT             reduce using rule 25 (inst -> PPXL REG .)
    SLL             reduce using rule 25 (inst -> PPXL REG .)
    SRL             reduce using rule 25 (inst -> PPXL REG .)
    SUB             reduce using rule 25 (inst -> PPXL REG .)
    ADDI            reduce using rule 25 (inst -> PPXL REG .)
    BEQ             reduce using rule 25 (inst -> PPXL REG .)
    BNE             reduce using rule 25 (inst -> PPXL REG .)
    LW              reduce using rule 25 (inst -> PPXL REG .)
    SLTI            reduce using rule 25 (inst -> PPXL REG .)
    SW              reduce using rule 25 (inst -> PPXL REG .)
    JAL             reduce using rule 25 (inst -> PPXL REG .)
    J               reduce using rule 25 (inst -> PPXL REG .)
    MOVE            reduce using rule 25 (inst -> PPXL REG .)
    MPP             reduce using rule 25 (inst -> PPXL REG .)
    MPPI            reduce using rule 25 (inst -> PPXL REG .)
    PPXL            reduce using rule 25 (inst -> PPXL REG .)
    PTMU            reduce using rule 25 (inst -> PPXL REG .)
    PTML            reduce using rule 25 (inst -> PPXL REG .)
    PTMD            reduce using rule 25 (inst -> PPXL REG .)
    PTMR            reduce using rule 25 (inst -> PPXL REG .)
    PPXLC           reduce using rule 25 (inst -> PPXL REG .)
    PMPXL           reduce using rule 25 (inst -> PPXL REG .)
    CS              reduce using rule 25 (inst -> PPXL REG .)
    SPNT            reduce using rule 25 (inst -> PPXL REG .)
    MPNT            reduce using rule 25 (inst -> PPXL REG .)
    $end            reduce using rule 25 (inst -> PPXL REG .)


state 58

    (26) inst -> PTMU REG .

    ID              reduce using rule 26 (inst -> PTMU REG .)
    NOP             reduce using rule 26 (inst -> PTMU REG .)
    ADD             reduce using rule 26 (inst -> PTMU REG .)
    AND             reduce using rule 26 (inst -> PTMU REG .)
    NOR             reduce using rule 26 (inst -> PTMU REG .)
    OR              reduce using rule 26 (inst -> PTMU REG .)
    SLT             reduce using rule 26 (inst -> PTMU REG .)
    SLL             reduce using rule 26 (inst -> PTMU REG .)
    SRL             reduce using rule 26 (inst -> PTMU REG .)
    SUB             reduce using rule 26 (inst -> PTMU REG .)
    ADDI            reduce using rule 26 (inst -> PTMU REG .)
    BEQ             reduce using rule 26 (inst -> PTMU REG .)
    BNE             reduce using rule 26 (inst -> PTMU REG .)
    LW              reduce using rule 26 (inst -> PTMU REG .)
    SLTI            reduce using rule 26 (inst -> PTMU REG .)
    SW              reduce using rule 26 (inst -> PTMU REG .)
    JAL             reduce using rule 26 (inst -> PTMU REG .)
    J               reduce using rule 26 (inst -> PTMU REG .)
    MOVE            reduce using rule 26 (inst -> PTMU REG .)
    MPP             reduce using rule 26 (inst -> PTMU REG .)
